--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             <strong>PKU-Yuan Lab and Tuzhan AI etc.</strong>,</span>
           </div>
           <div class="links">
-            <span class="link"><a href="https://github.com/PKU-YuanGroup/Open-Sora-Plan/tree/main/docs">Report</a></span>
+            <span class="link"><a href="https://arxiv.org/abs/2412.00131">Report</a></span>
             <span class="link"><a href="https://github.com/PKU-YuanGroup/Open-Sora-Plan">Code</a></span>
           </div>
         </div>
