--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
             <span class="link"><a href="https://github.com/PKU-YuanGroup/ConsisID">Code</a></span>
             <span class="link"><a href="https://pku-yuangroup.github.io/ConsisID/">Page</a></span>
             <span class="link"><a href="https://huggingface.co/datasets/BestWishYsh/ConsisID-preview-Data">Dataset</a></span>
+            <span class="link"><a href="https://www.youtube.com/watch?v=PhlgC-bI5SQ">Video</a></span>
           </div>
           <p class="desc">
             We present ConsisID, an identity-preserving text-to-video generation model, which can keep human-identity consistent in the generated video.
