--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <a href="https://www.cs.rochester.edu/u/jluo/">Jiebo Luo</a>,</span>
             <a href="https://yuanli2333.github.io/">Li Yuan</a></span>
           </div>
-          <p class="venue">CVPR, 2025</p>
+          <p class="venue">IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2025</p>
           <div class="links">
             <span class="link"><a href="https://arxiv.org/abs/2411.17440">Paper</a></span>
             <span class="link"><a href="https://github.com/PKU-YuanGroup/ConsisID">Code</a></span>
