--- a/index.html
+++ b/index.html
@@ -367,10 +367,17 @@
             </ul>
         </div>
 
+        <h1 id="award-heading">Academic Service </h1>
+        <div class="award">
+            <ul>
+                <li><em>CVPR 2025, SIGGRAPH 2025, ACM MM 2024, ACM MM 2023</em></li>
+            </ul>
+        </div>
+
     </main>
 
     <footer>
-      Last updated: Nov 2024<br>
+      Last updated: Mar 2025<br>
       Template from
       <a href="https://github.com/SHYuanBest/shyuanbest.github.io">here</a><br/>
     </footer>
