--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
             </ul>
         </div>
 
-        <h1 id="award-heading">Academic Service </h1>
-        <div class="award">
+        <h1 id="award-heading">Academic Service</h1>
+        <div class="academic_service">
             <ul>
                 <li><em>CVPR 2025, SIGGRAPH 2025, ACM MM 2024, ACM MM 2023</em></li>
             </ul>
