--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <a href="https://yuanli2333.github.io/">Li Yuan</a>,</span>
             <a href="https://www.cs.rochester.edu/u/jluo/">Jiebo Luo</a></span>
           </div>
-          <p class="venue">Arxiv, 2024</p>
+          <p class="venue">IEEE Transactions on Pattern Analysis and Machine Intelligence <strong>(TPAMI)</strong>, 2024</p>
           <div class="links">
             <span class="link"><a href="https://arxiv.org/abs/2404.05014">Paper</a></span>
             <span class="link"><a href="https://github.com/PKU-YuanGroup/MagicTime">Code</a></span>
