--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <span class="link"><a href="https://github.com/SHYuanBest/LHNet">Code</a></span>
           </div>
           <p class="desc">
-            We introduce LHNetV2, an advanced version of LHNet that combines various dehazing features more efficiently while enhancing running speed.
+            We introduce LHNetV2, an advanced version of LHNet that combines various dehazing features more efficiently while enhancing inference speed.
           </p>
         </div>
       </div>
@@ -310,7 +310,7 @@
       <h1>Selected Projects</h1>
       <div class="publication">
         <div>
-          <p class="title">Open-Sora-Plan</p>
+          <p class="title">Open-Sora Plan</p>
           <div class="authors">
             <strong>PKU-Yuan Lab and Tuzhan AI etc.</strong>,</span>
           </div>
