--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="publication">
       <picture>
         <img
-          src="OpenS2V-Nexus_logo.png"
+          src="https://github.com/SHYuanBest/shyuanbest_media/blob/main/OpenS2V-Nexus/OpenS2V-Nexus_logo.png?raw=true"
           width="154" height="153"
           alt="OpenS2V-Nexus: A Detailed Benchmark and Million-Scale Dataset for Subject-to-Video Generation" />
       </picture>
