--- a/index.html
+++ b/index.html
@@ -213,7 +213,6 @@
           <a href="https://infaaa.github.io/">Jinfa Huang</a>,</span>
           <a href="https://scholar.google.com/citations?hl=zh-CN&user=GCOVDKoAAAAJ">Bin
             Lin</a>,</span>
-          <a href="http://chongyangma.com/">Chongyang Ma</a>,</span>
           <a href="https://www.cs.rochester.edu/u/jluo/">Jiebo Luo</a>,</span>
           <a href="https://yuanli2333.github.io/">Li Yuan</a></span>
         </div>
@@ -257,6 +256,7 @@
           <span class="link"><a href="https://pku-yuangroup.github.io/ConsisID/">Page</a></span>
           <span class="link"><a
               href="https://huggingface.co/datasets/BestWishYsh/ConsisID-preview-Data">Dataset</a></span>
+          <span class="link"><a href="https://github.com/SHYuanBest/shyuanbest_media/blob/main/ConsisID/ConsisID_poster.pdf">Poster</a></span>
           <span class="link"><a href="https://www.youtube.com/watch?v=PhlgC-bI5SQ">Video</a></span>
         </div>
         <p class="desc">
