--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </picture>
     <div>
       <p>
-        I am a master of computer science and technology at
+        I am currently a first-year master of computer science and technology at
         <a href="https://www.ece.pku.edu.cn/">School of Electron and Computer Engineering</a>,
         <a href="https://www.pku.edu.cn/">Peking University</a>, advised by Prof.
         <a href="https://yuanli2333.github.io/">Li Yuan</a>.
