--- a/index.html
+++ b/index.html
@@ -401,13 +401,25 @@
     <h1>Selected Projects</h1>
     <div class="publication">
       <div>
-        <p class="title">Open-Sora Plan</p>
+        <p class="title">Open-Sora Plan: Open-source large video generation model</p>
         <div class="authors">
           <strong>PKU-Yuan Lab and Tuzhan AI etc.</strong>,</span>
         </div>
         <div class="links">
           <span class="link"><a href="https://arxiv.org/abs/2412.00131">Report</a></span>
           <span class="link"><a href="https://github.com/PKU-YuanGroup/Open-Sora-Plan">Code</a></span>
+        </div>
+      </div>
+
+      <div>
+        <p class="title">SparkWan: Few-Step is Enough for Video Diffusion Transformer via Hybrid Adversarial Post-Training</p>
+        <div class="authors">
+          <a href="https://scholar.google.com/citations?user=_TT3r1cAAAAJ&hl=zh-CN&oi=sra">Zongjian Li</a>,</span>
+          <strong>Shenghai Yuan</strong>,</span>
+        </div>
+        <div class="links">
+          <span class="link"><a href="https://github.com/PKU-YuanGroup">Report</a></span>
+          <span class="link"><a href="https://github.com/PKU-YuanGroup">Code</a></span>
         </div>
       </div>
     </div>
