--- a/index.html
+++ b/index.html
@@ -410,12 +410,14 @@
           <span class="link"><a href="https://github.com/PKU-YuanGroup/Open-Sora-Plan">Code</a></span>
         </div>
       </div>
+    </div>
 
+    <div class="publication">
       <div>
         <p class="title">SparkWan: Few-Step is Enough for Video Diffusion Transformer via Hybrid Adversarial Post-Training</p>
         <div class="authors">
-          <a href="https://scholar.google.com/citations?user=_TT3r1cAAAAJ&hl=zh-CN&oi=sra">Zongjian Li</a>,</span>
-          <strong>Shenghai Yuan</strong>,</span>
+          <a href="https://scholar.google.com/citations?user=_TT3r1cAAAAJ&hl=zh-CN&oi=sra">Zongjian Li*</a>,</span>
+          <strong>Shenghai Yuan*</strong>,</span>
         </div>
         <div class="links">
           <span class="link"><a href="https://github.com/PKU-YuanGroup">Report</a></span>
