--- a/index.html
+++ b/index.html
@@ -418,6 +418,7 @@
         <div class="authors">
           <a href="https://scholar.google.com/citations?user=_TT3r1cAAAAJ&hl=zh-CN&oi=sra">Zongjian Li*</a>,</span>
           <strong>Shenghai Yuan*</strong>,</span>
+          <a href="https://yuanli2333.github.io/">Li Yuan</a></span>
         </div>
         <div class="links">
           <span class="link"><a href="https://github.com/PKU-YuanGroup">Report</a></span>
