--- a/index.html
+++ b/index.html
@@ -476,14 +476,14 @@
     <h1 id="award-heading">Academic Service</h1>
     <div class="academic_service">
       <ul>
-        <li><em>NeurIPS 2025, CVPR 2025, SIGGRAPH 2025, ACM MM 2024, ACM MM 2023</em></li>
+        <li><em>ICCV 2025, NeurIPS 2025, CVPR 2025, SIGGRAPH 2025, ACM MM 2024, ACM MM 2023</em></li>
       </ul>
     </div>
 
   </main>
 
   <footer>
-    Last updated: May 2025<br>
+    Last updated: July 2025<br>
     Template from
     <a href="https://github.com/SHYuanBest/shyuanbest.github.io">here</a><br />
   </footer>
