--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <a href="https://www.cs.rochester.edu/u/jluo/">Jiebo Luo</a>,</span>
           <a href="https://yuanli2333.github.io/">Li Yuan</a></span>
         </div>
-        <p class="venue">Neural Information Processing Systems <strong>(NeurIPS D&B)</strong>strong>, 2025</p>
+        <p class="venue">Neural Information Processing Systems <strong>(NeurIPS D&B)</strong>, 2025</p>
         <div class="links">
           <span class="link"><a href="https://arxiv.org/abs/2505.20292">Paper</a></span>
           <span class="link"><a href="https://github.com/PKU-YuanGroup/OpenS2V-Nexus">Code</a></span>
