--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
   </main>
 
   <footer>
-    Last updated: July 2025<br>
+    Last updated: Sept. 2025<br>
     Template from
     <a href="https://github.com/SHYuanBest/shyuanbest.github.io">here</a><br />
   </footer>
