--- a/index.html
+++ b/index.html
@@ -467,9 +467,11 @@
     <h1 id="award-heading">Awards</h1>
     <div class="award">
       <ul>
-        <li><em>National Scholarship Award, PRC (2021)</em></li>
-        <li><em>National Scholarship Award, PRC (2022)</em></li>
+        <li><em>National Scholarship Award, PRC (2025)</em></li>
+        <li><em>Pacemaker to Merit Student, Peking University (2025)</em></li>
         <li><em>National Scholarship Award, PRC (2023)</em></li>
+        <li><em>National Scholarship Award, PRC (2022)</em></li>
+        <li><em>National Scholarship Award, PRC (2021)</em></li>
       </ul>
     </div>
 
@@ -483,7 +485,7 @@
   </main>
 
   <footer>
-    Last updated: Sept. 2025<br>
+    Last updated: Sep. 2025<br>
     Template from
     <a href="https://github.com/SHYuanBest/shyuanbest.github.io">here</a><br />
   </footer>
