--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <p class="title">OpenS2V-Nexus: A Detailed Benchmark and Million-Scale Dataset for Subject-to-Video Generation
         </p>
         <div class="authors">
-          <strong>Shenghai Yuan</strong>,</span>
+          <strong>Shenghai Yuan</strong><sup>*</sup>,</span>
           <a href="https://github.com/pkuhxy">Xianyi He</a>,</span>
           <a href="https://arxiv.org/abs/2503.10391">Yufan Deng</a>,</span>
           <a href="https://scholar.google.com/citations?user=2Vh4KeAAAAAJ&hl=zh-CN&oi=sra">YangYe</a>,</span>
