--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </p>
         <div class="authors">
           <strong>Shenghai Yuan</strong><sup>*</sup>,</span>
-          <a href="https://github.com/pkuhxy">Xianyi He</a>,</span>
+          <a href="https://github.com/pkuhxy">Xianyi He</a><sup>*</sup>,</span>
           <a href="https://arxiv.org/abs/2503.10391">Yufan Deng</a>,</span>
           <a href="https://scholar.google.com/citations?user=2Vh4KeAAAAAJ&hl=zh-CN&oi=sra">YangYe</a>,</span>
           <a href="https://infaaa.github.io/">Jinfa Huang</a>,</span>
