--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
           <span class="link"><a href="https://huggingface.co/datasets/BestWishYsh/OpenS2V-5M">Dataset</a></span>
           <span class="link"><a href="https://huggingface.co/datasets/BestWishYsh/OpenS2V-Eval">Benchmark</a></span>
           <span class="link"><a href="https://huggingface.co/spaces/BestWishYsh/OpenS2V-Eval">Leaderboard</a></span>
+          <span class="link"><a href="https://github.com/SHYuanBest/shyuanbest_media/blob/main/OpenS2V-Nexus/OpenS2V_poster.pdf">Poster</a></span>
         </div>
         <p class="desc">
           Introducing OpenS2V-Nexus which consists of: (i) OpenS2V-Eval, a fine-grained benchmark, and (ii) OpenS2V-5M, a million-scale dataset.
